{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "b96efd63-f81d-4d2b-980b-640ba48b1376",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "89235a41-2438-4c24-bfd3-1999de1afc34",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TapCheck",
                    "type": "Button",
                    "id": "15c9adf0-6139-4563-b4ad-e6a7229a399e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "CastFirstSpell",
                    "type": "Button",
                    "id": "08496ba0-f158-476e-9d63-ebcff5c697e4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CastSecondSpell",
                    "type": "Button",
                    "id": "ed911a5a-4347-4d97-aa1f-22539e644a41",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CastThirdSpell",
                    "type": "Button",
                    "id": "22a334fc-2440-4d79-87d2-1d94fd2bdb36",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e0574da8-f3cf-45cd-89ca-1331d09d67cb",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03d067bf-39d2-4962-89c5-7f998cff28bb",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TapCheck",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18a43c1b-152b-4bac-b9f7-9296d209e220",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastFirstSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "29fd876d-c238-407a-ab0e-a2b7d5e81fe6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastSecondSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9b61179-6f9c-4de1-a605-550e2c8f303f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CastThirdSpell",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}